--- a/dashboard.html
+++ b/dashboard.html
@@ -11,8 +11,8 @@
 
     <div id="tutorLinks" style="display: none;">
         <a href="create_slot.html">Создать слот</a>
-        <a href="tutor_slots.html">Просмотреть свои</a>
-        <a href="tutors_slots.html">Слоты других преподавателей</a>
+        <a href="tutor_slots.html">Мои слоты</a>
+        <a href="tutors_slots.html">Все слоты</a>
     </div>
 
     <div id="studentLinks" style="display: none;">
