Добавлены ссылки между страницами входа и регистрации, убраны стили из my_appointments.html

--- a/dashboard.html
+++ b/dashboard.html
@@ -13,6 +13,7 @@
         <a href="create_slot.html">Создать слот</a>
         <a href="tutor_slots.html">Мои слоты</a>
         <a href="tutors_slots.html">Все слоты</a>
+        <a href="my_appointments.html">Кто придет</a>
     </div>
 
     <div id="studentLinks" style="display: none;">
