--- a/login.html
+++ b/login.html
@@ -25,5 +25,6 @@
 
         <input type="submit" value="Войти">
     </form>
+    <p>Нет аккаунта? <a href="register.html">Зарегистрируйтесь</a></p>
 </body>
 </html>
