--- a/register.html
+++ b/register.html
@@ -25,5 +25,6 @@
 
         <input type="submit" value="Зарегистрироваться">
     </form>
+    <p>Уже есть аккаунт? <a href="login.html">Войти</a></p>
 </body>
 </html>
