Вход по email, обновлены формы регистрации и входа, email теперь обязателен и уникален

--- a/login.html
+++ b/login.html
@@ -8,11 +8,8 @@
 <body>
     <h2>Вход</h2>
     <form action="login.php" method="post">
-        <label>Имя:</label><br>
-        <input type="text" name="name" required><br>
-
-        <label>Фамилия:</label><br>
-        <input type="text" name="surname" required><br>
+        <label>Email:</label><br>
+        <input type="email" name="email" required><br>
 
         <label>Пароль:</label><br>
         <input type="password" name="password" required><br>
