--- a/my_appointments.html
+++ b/my_appointments.html
@@ -24,6 +24,9 @@
             У вас пока нет созданных таймслотов с записанными студентами.
         </div>
     </div>
+    <a href="dashboard.html">Главное меню</a>
+
+    
     <script>
         fetch('dashboard.php')
             .then(response => response.json())
