--- a/student_my_slots.html
+++ b/student_my_slots.html
@@ -8,6 +8,8 @@
     <h2>Ваши записи на таймслоты</h2>
     <div id="my-slots">Загрузка...</div>
 
+    <a href="dashboard.html">Главное меню</a>
+
     <script>
         function loadMySlots() {
             fetch('student_my_slots.php')
@@ -60,5 +62,6 @@
 
         window.onload = loadMySlots;
     </script>
+
 </body>
 </html>
