--- a/tutor_slots.html
+++ b/tutor_slots.html
@@ -8,6 +8,8 @@
     <h2>Ваши таймслоты</h2>
     <div id="slots">Загрузка...</div>
 
+    <a href="dashboard.html">Главное меню</a>
+
     <script>
         function loadSlots() {
             fetch('tutor_slots.php')
