--- a/tutors_slots.html
+++ b/tutors_slots.html
@@ -17,6 +17,8 @@
     <h2>Доступные таймслоты</h2>
     <div id="slots"></div>
 
+    <a href="dashboard.html">Главное меню</a>
+
     <script>
         // Загрузим список курсов
         fetch('courses.php')
