--- a/student_slots.html
+++ b/student_slots.html
@@ -16,7 +16,10 @@
 
     <h2>Доступные таймслоты</h2>
     <div id="slots"></div>
-
+    <div id="enroll-message"></div>
+    
+    <a href="dashboard.html">Главное меню</a>
+    
     <script>
         // Загрузим список курсов
         fetch('courses.php')
@@ -59,14 +62,28 @@
         });
 
         function enroll(timeslotId) {
+            const messageDiv = document.getElementById('enroll-message');
+            messageDiv.textContent = '';
+            const data = new FormData();
+            data.append('timeslot_id', timeslotId);
             fetch('student_enroll.php', {
                 method: 'POST',
-                headers: {'Content-Type': 'application/x-www-form-urlencoded'},
-                body: 'timeslot_id=' + encodeURIComponent(timeslotId)
+                body: data
             })
-            .then(res => res.json())
-            .then(response => {
-                alert(response.success ? 'Успешно записано!' : response.error || 'Ошибка');
+            .then(response => response.text())
+            .then(text => {
+                if (text.includes('успешно')) {
+                    messageDiv.textContent = text;
+                    messageDiv.style.color = 'green';
+                    // Можно обновить список слотов или скрыть кнопку
+                } else {
+                    messageDiv.textContent = text;
+                    messageDiv.style.color = 'red';
+                }
+            })
+            .catch(() => {
+                messageDiv.textContent = 'Ошибка при отправке запроса';
+                messageDiv.style.color = 'red';
             });
         }
     </script>
