Upload all new changes

--- a/frontend/create_slot.html
+++ b/frontend/create_slot.html
@@ -3,29 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Create Slot</title>
 </head>
 <body>
-    <h2>Создать свободный слот</h2>
+    <h2>Create a Free Slot</h2>
 
     <form id="create-slot-form">
-        <label>Дата:</label><br>
+        <label>Date:</label><br>
         <input type="date" name="date" required><br>
 
-        <label>Время начала:</label><br>
+        <label>Start Time:</label><br>
         <input type="time" name="start_time" required><br>
 
-        <label>Время окончания:</label><br>
+        <label>End Time:</label><br>
         <input type="time" name="end_time" required><br>
 
-        <label>Название курса:</label><br>
+        <label>Course Name:</label><br>
         <input type="text" name="course_name" required><br><br>
 
-        <input type="submit" value="Создать таймслот">
+        <input type="submit" value="Create Slot">
     </form>
     <div id="slot-message"></div>
 
-    <a href="dashboard.html">Главное меню</a>
+    <a href="dashboard.html">Main menu</a>
     
     <script>
     document.getElementById('create-slot-form').addEventListener('submit', async function(e) {
@@ -40,7 +40,7 @@
                 body: data
             });
             const text = await response.text();
-            if (text.includes('успешно')) {
+            if (text.includes('successfully')) {
                 messageDiv.textContent = text;
                 messageDiv.style.color = 'green';
                 form.reset();
@@ -49,7 +49,7 @@
                 messageDiv.style.color = 'red';
             }
         } catch (err) {
-            messageDiv.textContent = 'Ошибка при отправке запроса';
+            messageDiv.textContent = 'Request error';
             messageDiv.style.color = 'red';
         }
     });
