--- a/frontend/tutor_slots.html
+++ b/frontend/tutor_slots.html
@@ -2,13 +2,13 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Мои таймслоты</title>
+    <title>Your timeslots</title>
 </head>
 <body>
-    <h2>Ваши таймслоты</h2>
-    <div id="slots">Загрузка...</div>
+    <h2>Your timeslots</h2>
+    <div id="slots">Loading...</div>
 
-    <a href="dashboard.html">Главное меню</a>
+    <a href="dashboard.html">Main menu</a>
 
     <script>
         function loadSlots() {
@@ -18,18 +18,18 @@
                     const container = document.getElementById('slots');
 
                     if (!Array.isArray(data) || data.length === 0) {
-                        container.innerHTML = '<p>Нет созданных слотов</p>';
+                        container.innerHTML = '<p>No created slots</p>';
                         return;
                     }
 
-                    let html = '<table border="1"><tr><th>Дата</th><th>Начало</th><th>Окончание</th><th>Курс</th><th></th></tr>';
+                    let html = '<table border="1"><tr><th>Date</th><th>Start</th><th>End</th><th>Course</th><th></th></tr>';
                     data.forEach(slot => {
                         html += `<tr>
                             <td>${slot.Date}</td>
                             <td>${slot.Start_Time}</td>
                             <td>${slot.End_Time}</td>
                             <td>${slot.Course_name}</td>
-                            <td><button onclick="deleteSlot(${slot.Timeslot_ID})">Удалить</button></td>
+                            <td><button onclick="deleteSlot(${slot.Timeslot_ID})">Delete</button></td>
                         </tr>`;
                     });
                     html += '</table>';
@@ -39,7 +39,7 @@
         }
 
         function deleteSlot(id) {
-            if (!confirm('Вы уверены, что хотите удалить этот слот?')) return;
+            if (!confirm('Are you sure you want to delete this slot?')) return;
 
             fetch('../backend/delete_slot.php', {
                 method: 'POST',
@@ -49,9 +49,9 @@
             .then(response => response.json())
             .then(result => {
                 if (result.success) {
-                    loadSlots(); // перезагружаем таблицу
+                    loadSlots(); // reload the table
                 } else {
-                    alert('Ошибка удаления');
+                    alert('Error deleting');
                 }
             });
         }
