--- a/frontend/tutors_slots.html
+++ b/frontend/tutors_slots.html
@@ -2,25 +2,25 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Доступные таймслоты</title>
+    <title>Available Timeslots</title>
 </head>
 <body>
-    <h2>Выберите курс</h2>
+    <h2>Select a Course</h2>
 
     <form id="filter-form">
         <select id="course-select" name="course_id">
-            <!-- курсы появятся автоматически -->
+            <!-- courses will appear automatically -->
         </select>
-        <button type="submit">Показать</button>
+        <button type="submit">Show</button>
     </form>
 
-    <h2>Доступные таймслоты</h2>
+    <h2>Available Timeslots</h2>
     <div id="slots"></div>
 
-    <a href="dashboard.html">Главное меню</a>
+    <a href="dashboard.html">Main menu</a>
 
     <script>
-        // Загрузим список курсов
+        // Load the list of courses
         fetch('../backend/courses.php')
             .then(res => res.json())
             .then(courses => {
@@ -41,11 +41,11 @@
                 .then(slots => {
                     const container = document.getElementById('slots');
                     if (slots.length === 0) {
-                        container.innerHTML = '<p>Нет доступных слотов.</p>';
+                        container.innerHTML = '<p>No available slots.</p>';
                         return;
                     }
 
-                    let html = '<table border="1"><tr><th>Дата</th><th>Начало</th><th>Окончание</th><th>Преподаватель</th></tr>';
+                    let html = '<table border="1"><tr><th>Date</th><th>Start</th><th>End</th><th>Tutor</th></tr>';
                     slots.forEach(slot => {
                         html += `<tr>
                             <td>${slot.Date}</td>
