--- a/frontend/tutor_slots.html
+++ b/frontend/tutor_slots.html
@@ -1,15 +1,134 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Your timeslots</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: 'Roboto', Arial, sans-serif;
+            background: url('background.jpg') no-repeat center center fixed;
+            background-size: cover;
+            min-height: 100vh;
+        }
+        .overlay {
+            position: fixed;
+            top: 0; left: 0; right: 0; bottom: 0;
+            background: rgba(0,0,0,0.5);
+            z-index: 0;
+        }
+        .container {
+            position: relative;
+            z-index: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+        }
+        .panel {
+            background: rgba(20, 20, 20, 0.85);
+            color: #fff;
+            border-radius: 12px;
+            margin: 20px;
+            padding: 32px 28px;
+            min-width: 320px;
+            max-width: 540px;
+            box-shadow: 0 8px 32px rgba(0,0,0,0.25);
+            display: flex;
+            flex-direction: column;
+            align-items: stretch;
+        }
+        .panel h2 {
+            margin-top: 0;
+            margin-bottom: 18px;
+            text-align: center;
+        }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-bottom: 18px;
+            background: rgba(255,255,255,0.07);
+            border-radius: 8px;
+            overflow: hidden;
+        }
+        th, td {
+            padding: 10px 8px;
+            text-align: center;
+        }
+        th {
+            background: #4a90e2;
+            color: #fff;
+            font-weight: 700;
+            font-size: 1.05rem;
+        }
+        tr:nth-child(even) {
+            background: rgba(255,255,255,0.08);
+        }
+        tr:nth-child(odd) {
+            background: rgba(255,255,255,0.02);
+        }
+        button {
+            background: #e53e3e;
+            color: #fff;
+            border: none;
+            border-radius: 6px;
+            padding: 7px 16px;
+            font-size: 1rem;
+            font-weight: 500;
+            cursor: pointer;
+            transition: background 0.18s;
+        }
+        button:hover {
+            background: #b91c1c;
+        }
+        #slots {
+            min-height: 40px;
+        }
+        .main-menu-link {
+            text-align: center;
+            margin-top: 18px;
+            font-size: 0.98rem;
+        }
+        .main-menu-link a {
+            color: #4a90e2;
+            text-decoration: none;
+            font-weight: 500;
+        }
+        .main-menu-link a:hover {
+            text-decoration: underline;
+        }
+        @media (max-width: 700px) {
+            .container {
+                flex-direction: column;
+                gap: 10px;
+            }
+            .panel {
+                min-width: 90vw;
+                max-width: 98vw;
+                padding: 18px 6vw;
+            }
+            table, th, td {
+                font-size: 0.98rem;
+            }
+        }
+    </style>
 </head>
 <body>
-    <h2>Your timeslots</h2>
-    <div id="slots">Loading...</div>
-
-    <a href="dashboard.html">Main menu</a>
-
+    <div class="overlay"></div>
+    <div class="container">
+        <div class="panel">
+            <h2>Your timeslots</h2>
+            <div id="slots">Loading...</div>
+            <div class="main-menu-link">
+                <a href="dashboard.html">Main menu</a>
+            </div>
+        </div>
+    </div>
     <script>
         function loadSlots() {
             fetch('../backend/tutor_slots.php')
@@ -22,7 +141,7 @@
                         return;
                     }
 
-                    let html = '<table border="1"><tr><th>Date</th><th>Start</th><th>End</th><th>Course</th><th></th></tr>';
+                    let html = '<table><tr><th>Date</th><th>Start</th><th>End</th><th>Course</th><th></th></tr>';
                     data.forEach(slot => {
                         html += `<tr>
                             <td>${slot.Date}</td>
