refactor: move all page styles to style.css, update all HTML to use external stylesheet, unify UI

--- a/frontend/register.html
+++ b/frontend/register.html
@@ -7,109 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: 'Roboto', Arial, sans-serif;
-            background: url('background.jpg') no-repeat center center fixed;
-            background-size: cover;
-            min-height: 100vh;
-        }
-        .overlay {
-            position: fixed;
-            top: 0; left: 0; right: 0; bottom: 0;
-            background: rgba(0,0,0,0.5);
-            z-index: 0;
-        }
-        .container {
-            position: relative;
-            z-index: 1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-        }
-        .panel {
-            background: rgba(20, 20, 20, 0.85);
-            color: #fff;
-            border-radius: 12px;
-            margin: 20px;
-            padding: 32px 28px;
-            min-width: 320px;
-            max-width: 370px;
-            box-shadow: 0 8px 32px rgba(0,0,0,0.25);
-            display: flex;
-            flex-direction: column;
-            align-items: stretch;
-        }
-        .panel h2 {
-            margin-top: 0;
-            margin-bottom: 18px;
-            text-align: center;
-        }
-        .form-group {
-            margin-bottom: 18px;
-        }
-        label {
-            font-size: 1rem;
-            margin-bottom: 6px;
-            display: block;
-        }
-        input, select {
-            width: 100%;
-            padding: 10px 12px;
-            border-radius: 6px;
-            border: none;
-            margin-bottom: 8px;
-            font-size: 1rem;
-        }
-        input[type="submit"] {
-            background: #4a90e2;
-            color: #fff;
-            border: none;
-            border-radius: 6px;
-            padding: 12px 0;
-            font-size: 1.1rem;
-            font-weight: bold;
-            cursor: pointer;
-            margin-top: 8px;
-            transition: background 0.2s;
-        }
-        input[type="submit"]:hover {
-            background: #357ab8;
-        }
-        .register-message {
-            min-height: 22px;
-            margin-bottom: 8px;
-            text-align: center;
-            font-size: 1rem;
-        }
-        .login-link {
-            text-align: center;
-            margin-top: 18px;
-            font-size: 0.98rem;
-        }
-        .login-link a {
-            color: #4a90e2;
-            text-decoration: none;
-            font-weight: 500;
-        }
-        .login-link a:hover {
-            text-decoration: underline;
-        }
-        @media (max-width: 700px) {
-            .container {
-                flex-direction: column;
-                gap: 10px;
-            }
-            .panel {
-                min-width: 90vw;
-                max-width: 98vw;
-                padding: 18px 6vw;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="overlay"></div>
