Update delete_slot.php and dashboard.html

--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -34,6 +34,14 @@
             <div class="welcome-card">
                 <h2>Welcome, <span id="userName"></span>!</h2>
                 <p>You are logged in as <span class="role-badge" id="userRole"></span>.</p>
+                <p>This is a demo version of the CAE website. Currently, the following basic functions are available:</p>
+                <ul>
+                    <li>Creating and managing time slots for tutors.</li>
+                    <li>Booking available slots for students.</li>
+                    <li>Viewing and managing appointments.</li>
+                </ul>
+                <p>Full functionality will be added soon. Thank you for your patience and support!</p>
+                <p>Special thanks to Mohammadamin Dadras for his mentorship and guidance.</p>
                 <div id="tutorLinks" class="links-block" style="display: none;">
                     <a href="create_slot.html">Create Slot</a>
                     <a href="tutor_slots.html">My Slots</a>
